Adding profile picture.